--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
 # This assumes that the Zola site is in a docs folder. If it isn't, you don't need
 # to have a `base` variable but you do need the `publish` and `command` variables.
-publish = "/public"
+base    = "docs"
+publish = "docs/public"
 command = "zola build"
 
 [build.environment]
